@@ -165,8 +165,8 @@ is.unsorted <- function(x, na.rm = FALSE, strictly = FALSE)
     .Internal(is.unsorted(x, strictly))
 }
 
-nchar <- function(x, type = "chars", allowNA = FALSE)
-    .Internal(nchar(x, type, allowNA))
+nchar <- function(x, type = "chars", allowNA = FALSE, keepNA = FALSE)
+    .Internal(nchar(x, type, allowNA, keepNA))
 
 polyroot <- function(z) .Internal(polyroot(z))
 
