@@ -22,7 +22,7 @@
 
 nzchar nchar substr substr<- abbreviate tolower toupper chartr strtrim
 
-and the utility 
+and the utility
 
 make.names
 
@@ -96,9 +96,15 @@ static R_StringBuffer cbuff = {NULL, 0, MAXELTSIZE};
 SEXP attribute_hidden do_nzchar(SEXP call, SEXP op, SEXP args, SEXP env)
 {
     SEXP x, ans;
-    R_xlen_t i, len;
+    int nargs = length(args);
 
-    checkArity(op, args);
+    // checkArity(op, args);  .Primitive()  &  may have 1 or 2 args now
+    if (nargs < 1 || nargs > 2)
+	errorcall(call,
+		  ngettext("%d argument passed to '%s' which requires %d to %d",
+			   "%d arguments passed to '%s' which requires %d to %d",
+			   (unsigned long) nargs),
+		  nargs, PRIMNAME(op), 1, 2);
     check1arg(args, call, "x");
 
     if (isFactor(CAR(args)))
@@ -106,10 +112,22 @@ SEXP attribute_hidden do_nzchar(SEXP call, SEXP op, SEXP args, SEXP env)
     PROTECT(x = coerceVector(CAR(args), STRSXP));
     if (!isString(x))
 	error(_("'%s' requires a character vector"), "nzchar()");
-    len = XLENGTH(x);
+
+    int keepNA = FALSE; // the default
+    if(nargs > 1) {
+	keepNA = asLogical(CADR(args));
+	if (keepNA == NA_LOGICAL) keepNA = FALSE;
+    }
+    R_xlen_t i, len = XLENGTH(x);
     PROTECT(ans = allocVector(LGLSXP, len));
-    for (i = 0; i < len; i++)
-	LOGICAL(ans)[i] = LENGTH(STRING_ELT(x, i)) > 0;
+    if (keepNA)
+	for (i = 0; i < len; i++) {
+	    SEXP sxi = STRING_ELT(x, i);
+	    LOGICAL(ans)[i] = (sxi == NA_STRING) ? NA_LOGICAL : LENGTH(sxi) > 0;
+	}
+    else
+	for (i = 0; i < len; i++)
+	    LOGICAL(ans)[i] = LENGTH(STRING_ELT(x, i)) > 0;
     UNPROTECT(2);
     return ans;
 }
@@ -117,42 +135,57 @@ SEXP attribute_hidden do_nzchar(SEXP call, SEXP op, SEXP args, SEXP env)
 SEXP attribute_hidden do_nchar(SEXP call, SEXP op, SEXP args, SEXP env)
 {
     SEXP d, s, x, stype;
-    R_xlen_t i, len;
-    int allowNA;
-    size_t ntype;
-    int nc;
-    const char *type;
-    const char *xi;
-    wchar_t *wc;
-    const void *vmax;
+    int nc, nargs = length(args);
 
+#ifdef R_version_3_4_or_so
     checkArity(op, args);
+#else
+    // will work also for code byte-compiled *before* 'keepNA' was introduced
+    if (nargs < 3 || nargs > 4)
+	errorcall(call,
+		  ngettext("%d argument passed to '%s' which requires %d to %d",
+			   "%d arguments passed to '%s' which requires %d to %d",
+			   (unsigned long) nargs),
+		  nargs, PRIMNAME(op), 3, 4);
+#endif
     if (isFactor(CAR(args)))
 	error(_("'%s' requires a character vector"), "nchar()");
     PROTECT(x = coerceVector(CAR(args), STRSXP));
     if (!isString(x))
 	error(_("'%s' requires a character vector"), "nchar()");
-    len = XLENGTH(x);
+    R_xlen_t len = XLENGTH(x);
     stype = CADR(args);
     if (!isString(stype) || LENGTH(stype) != 1)
 	error(_("invalid '%s' argument"), "type");
-    type = CHAR(STRING_ELT(stype, 0)); /* always ASCII */
-    ntype = strlen(type);
+    const char *type = CHAR(STRING_ELT(stype, 0)); /* always ASCII */
+    size_t ntype = strlen(type);
     if (ntype == 0) error(_("invalid '%s' argument"), "type");
-    allowNA = asLogical(CADDR(args));
+    enum {Bytes, Chars, Width} type_;
+    if (strncmp(type, "bytes", ntype) == 0)	 type_ = Bytes;
+    else if (strncmp(type, "chars", ntype) == 0) type_ = Chars;
+    else if (strncmp(type, "width", ntype) == 0) type_ = Width;
+    else error(_("invalid '%s' argument"), "type");
+    int allowNA = asLogical(CADDR(args));
     if (allowNA == NA_LOGICAL) allowNA = 0;
-
+    int keepNA;
+    if(nargs >= 4) {
+	keepNA = asLogical(CADDDR(args));
+	if (keepNA == NA_LOGICAL)
+	    keepNA = (type_ == Width) ? FALSE : TRUE;
+    } else  keepNA = FALSE; // default
     PROTECT(s = allocVector(INTSXP, len));
-    vmax = vmaxget();
-    for (i = 0; i < len; i++) {
+    const void *vmax = vmaxget();
+    for (R_xlen_t i = 0; i < len; i++) {
 	SEXP sxi = STRING_ELT(x, i);
 	if (sxi == NA_STRING) {
-	    INTEGER(s)[i] = 2;
+	    INTEGER(s)[i] = keepNA ? NA_INTEGER : 2;
 	    continue;
 	}
-	if (strncmp(type, "bytes", ntype) == 0) {
+	switch(type_) {
+	case Bytes:
 	    INTEGER(s)[i] = LENGTH(sxi);
-	} else if (strncmp(type, "chars", ntype) == 0) {
+	    break;
+	case Chars:
 	    if (IS_UTF8(sxi)) {
 		const char *p = CHAR(sxi);
 		if (!utf8Valid(p)) {
@@ -166,7 +199,9 @@ SEXP attribute_hidden do_nchar(SEXP call, SEXP op, SEXP args, SEXP env)
 		INTEGER(s)[i] = nc;
 	    } else if (IS_BYTES(sxi)) {
 		if (!allowNA) /* could do chars 0 */
-		    error(_("number of characters is not computable for element %d in \"bytes\" encoding"), i+1);
+		    error(_(
+		"number of characters is not computable for element %d in \"bytes\" encoding"),
+			  i+1);
 		INTEGER(s)[i] = NA_INTEGER;
 	    } else if (mbcslocale) {
 		nc = (int) mbstowcs(NULL, translateChar(sxi), 0);
@@ -175,7 +210,8 @@ SEXP attribute_hidden do_nchar(SEXP call, SEXP op, SEXP args, SEXP env)
 		INTEGER(s)[i] = nc >= 0 ? nc : NA_INTEGER;
 	    } else
 		INTEGER(s)[i] = (int) strlen(translateChar(sxi));
-	} else if (strncmp(type, "width", ntype) == 0) {
+	    break;
+	case Width:
 	    if (IS_UTF8(sxi)) {
 		const char *p = CHAR(sxi);
 		if (!utf8Valid(p)) {
@@ -196,11 +232,11 @@ SEXP attribute_hidden do_nchar(SEXP call, SEXP op, SEXP args, SEXP env)
 		    error(_("width is not computable for element %d in \"bytes\" encoding"), i+1);
 		INTEGER(s)[i] = NA_INTEGER;
 	    } else if (mbcslocale) {
-		xi = translateChar(sxi);
+		const char *xi = translateChar(sxi);
 		nc = (int) mbstowcs(NULL, xi, 0);
 		if (nc >= 0) {
-		    wc = (wchar_t *) R_AllocStringBuffer((nc+1)*sizeof(wchar_t), &cbuff);
-
+		    wchar_t *wc = (wchar_t *)
+			R_AllocStringBuffer((nc+1)*sizeof(wchar_t), &cbuff);
 		    mbstowcs(wc, xi, nc + 1);
 		    INTEGER(s)[i] = Ri18n_wcswidth(wc, 2147483647);
 		    if (INTEGER(s)[i] < 1) INTEGER(s)[i] = nc;
@@ -210,10 +246,10 @@ SEXP attribute_hidden do_nchar(SEXP call, SEXP op, SEXP args, SEXP env)
 		    INTEGER(s)[i] = NA_INTEGER;
 	    } else
 		INTEGER(s)[i] = (int) strlen(translateChar(sxi));
-	} else
-	    error(_("invalid '%s' argument"), "type");
+
+	} // switch(type_)
 	vmaxset(vmax);
-    }
+    } // for(..)
     R_FreeStringBufferL(&cbuff);
     if ((d = getAttrib(x, R_NamesSymbol)) != R_NilValue)
 	setAttrib(s, R_NamesSymbol, d);
@@ -377,7 +413,7 @@ SEXP attribute_hidden do_substrgets(SEXP call, SEXP op, SEXP args, SEXP env)
 
 	v = LENGTH(value);
 	if (!isString(value) || v == 0) error(_("invalid value"));
-	
+
 	vmax = vmaxget();
 	for (i = 0; i < len; i++) {
 	    el = STRING_ELT(x, i);
@@ -1126,7 +1162,7 @@ SEXP attribute_hidden do_chartr(SEXP call, SEXP op, SEXP args, SEXP env)
 
 	trs_cnt_ptr = Calloc(1, struct wtr_spec *);
 	*trs_cnt_ptr = trs_cnt->next;
-	for (xtable_cnt = 0 ; wtr_get_next_char_from_spec(trs_cnt_ptr); 
+	for (xtable_cnt = 0 ; wtr_get_next_char_from_spec(trs_cnt_ptr);
 	      xtable_cnt++) ;
 	wtr_free_spec(trs_cnt);
 	Free(trs_cnt_ptr);
@@ -1205,7 +1241,7 @@ SEXP attribute_hidden do_chartr(SEXP call, SEXP op, SEXP args, SEXP env)
 	struct tr_spec *trs_old, **trs_old_ptr;
 	struct tr_spec *trs_new, **trs_new_ptr;
 
-	for (unsigned int ii = 0; ii <= UCHAR_MAX; ii++) 
+	for (unsigned int ii = 0; ii <= UCHAR_MAX; ii++)
 	    xtable[ii] = (unsigned char) ii;
 
 	/* Initialize the old and new tr_spec lists. */
@@ -1349,7 +1385,7 @@ SEXP attribute_hidden do_strtoi(SEXP call, SEXP op, SEXP args, SEXP env)
 
     x = CAR(args); args = CDR(args);
     b = CAR(args);
-    
+
     if(!isInteger(b) || (length(b) < 1))
 	error(_("invalid '%s' argument"), "base");
     base = INTEGER(b)[0];
@@ -1360,7 +1396,7 @@ SEXP attribute_hidden do_strtoi(SEXP call, SEXP op, SEXP args, SEXP env)
     for(i = 0; i < n; i++)
 	INTEGER(ans)[i] = strtoi(STRING_ELT(x, i), base);
     UNPROTECT(1);
-    
+
     return ans;
 }
 
